--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
         "cordova-plugin-statusbar": "2.2.1",
         "cordova-plugin-whitelist": "1.3.1",
         "cordova-sqlite-storage": "~2.0.2",
-        "ionic-plugin-keyboard": "~2.2.1"
+        "ionic-plugin-keyboard": "~2.2.1",
+        "ionic-plugin-deeplinks": "~1.0.14"
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.7",
@@ -100,7 +101,14 @@
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
             "cordova-sqlite-storage": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "ionic-plugin-deeplinks": {
+                "URL_SCHEME": "munchr",
+                "DEEPLINK_SCHEME": "https",
+                "DEEPLINK_HOST": "www.munchr.site",
+                "DEEPLINK_2_SCHEME": "https",
+                "DEEPLINK_2_HOST": "munchr.site"
+            }
         }
     }
 }
